# cycloid

./: .gitignore  cycloid_workbook.ipynb  pyproject.toml
cycloid/: main.py  symmath.py
